src/objects/sma__MAFolder__c.object
<CustomObject>
    <fields>
        <fullName>sma__Order__c</fullName>
        <label>Order</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sma__ParentFolder__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Folder</label>
        <referenceTo>sma__MAFolder__c</referenceTo>
        <relationshipLabel>MapAnything Folders</relationshipLabel>
        <relationshipName>MapAnything_Folders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sma__ProfileIds__c</fullName>
        <label>Profile Ids</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>sma__RoleId__c</fullName>
        <label>RoleId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sma__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>MapAnything_Folders</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>MapAnything Folder</label>
    <listViews>
        <fullName>sma__All</fullName>
        <columns>NAME</columns>
        <columns>sma__ParentFolder__c</columns>
        <columns>sma__RoleId__c</columns>
        <columns>sma__Order__c</columns>
        <columns>sma__User__c</columns>
        <columns>sma__ProfileIds__c</columns>
        <columns>CONNECTION_RECEIVED.NAME</columns>
        <columns>CONNECTION_SENT.NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>sma__All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Folder Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MapAnything Folders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>